[project]
name = "short-url-service"
version = "0.1.0"
description = "Short URL service with DDD architecture"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "authx>=1.5.1",
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.8.0",
    "redis>=7.3.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.41.0",
    "asyncpg>=0.30.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.3.0",
    "argon2-cffi>=25.1.0",
    "pyjwt>=2.11.0",
    "slowapi>=0.1.9",
]
